# arbox-automation

./: .gitignore  Cargo.toml  Dockerfile  users.json
src/: main.rs
src/api/: arbox_api.rs  mod.rs  models.rs
src/users/: mod.rs  models.rs  users.json  users.rs
src/utils/: date_time.rs  health_check.rs  logger.rs  mod.rs
