[package]
name = "arbox_automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.4", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.116"
serde = {version = "1.0.198", features = ["serde_derive"]}
dotenv = "0.15.0"
log = "0.4.21"